--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
-    "koa": "^2.0.0",
+    "koa": "^2.2.0",
     "koa-websocket": "^2.1.0",
     "mocha": "^3.2.0",
     "prompt": "^1.0.0",
@@ -33,14 +33,17 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "kcors": "^2.0.0",
-    "koa-bodyparser": "^3.2.0",
-    "koa-router": "^7.0.1",
+    "koa-body": "^2.0.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.2.0",
     "koa-s3-sign-upload": "^1.0.2",
     "koa-socket": "^4.4.0",
+    "koa-static": "^3.0.0",
     "koa-views": "^5.2.0",
-    "koa2-cors": "^2.0.3",
     "serialport": "^4.0.7",
+    "timer-machine": "^1.1.0",
     "underscore": "^1.8.3"
   }
 }
