--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "koa-socket": "^4.4.0",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.0",
-    "serialport": "^4.0.7",
+    "play-sound": "^1.1.1",
+    "serialport": "4.0.7",
     "timer-machine": "^1.1.0",
-    "underscore": "^1.8.3",
-    "serialport" : "4.0.7"
+    "underscore": "^1.8.3"
   }
 }
