--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "koa-views": "^5.2.0",
     "serialport": "^4.0.7",
     "timer-machine": "^1.1.0",
-    "underscore": "^1.8.3",
-    "serialport" : "4.0.7"
+    "underscore": "^1.8.3"
   }
 }
